------------------------------------------------------------------------------
  qPython 1.0 RC1 [2014.10.22]
------------------------------------------------------------------------------

  - Introduce support for pandas

------------------------------------------------------------------------------
  qPython 1.0 Beta 6 [2014.10.16]
------------------------------------------------------------------------------

  - Configurable deserialization for temporal vectors
  - numpy datetime64/timedelta64 vectors ans atoms are now serializable without 
    explicit conversions
  - QTemporal: null values are now backed as numpy NaT
  - Fix: error handling while initializing connection
  - Fix: sanity check against protocol version for guids
  - Fix: socket timeout in qwriter

------------------------------------------------------------------------------
  qPython 1.0 Beta 5 [2014.10.01]
------------------------------------------------------------------------------

  - Redesign lambdas and projections handling
  - Rework collections API
  - Extend QConnection class with context manager API
  - Fix: reading of generic null (::) embedded in lists
  - Fix: sending generic lists as columns in tables

------------------------------------------------------------------------------
  qPython 1.0 Beta 4 [2014.07.04]
------------------------------------------------------------------------------

  - qtemporallist: force numpy.array type conversion in case of mismatch between 
    meta.qtype and dtype of raw list
  - Enable Travis CI integration
  - Update project meta-information

------------------------------------------------------------------------------
  qPython 1.0 Beta 3 [2014.05.26]
------------------------------------------------------------------------------

  - Fix: creation of q dictionary with values represented as table

------------------------------------------------------------------------------
  qPython 1.0 Beta 2 [2014.05.12]