@@ -132,6 +132,8 @@ ED00000080
 0B00020000000000
 ("quick"; "brown"; "fox"; "jumps"; "over"; "a lazy"; "dog")
 0000070000000A0005000000717569636B0A000500000062726F776E0A0003000000666F780A00050000006A756D70730A00040000006F7665720A000600000061206C617A790A0003000000646F67
+("quick"; " "; "fox"; "jumps"; "over"; "a lazy"; "dog")
+0000070000000A0005000000717569636BF6200A0003000000666F780A00050000006A756D70730A00040000006F7665720A000600000061206C617A790A0003000000646F67
 2000.01.04D05:36:57.600 0Np
 0C000200000000C0CAFA20FE00000000000000000080
 (2001.01m; 0Nm)
@@ -196,6 +198,8 @@ flip `name`iq`grade!(`Dent`Beeblebrox`Prefect;98 42 126;"a c")
 6200630B00030000006E616D65006971006772616465000000030000000B000300000044656E7400426565626C6562726F7800507265666563740007000300000062000000000000002A000000000000007E000000000000000A0003000000612063
 flip `name`iq`fullname!(`Dent`Beeblebrox`Prefect;98 42 126;("Arthur Dent"; "Zaphod Beeblebrox"; "Ford Prefect"))
 6200630B00030000006E616D650069710066756C6C6E616D65000000030000000B000300000044656E7400426565626C6562726F7800507265666563740007000300000062000000000000002A000000000000007E000000000000000000030000000A000B0000004172746875722044656E740A00110000005A6170686F6420426565626C6562726F780A000C000000466F72642050726566656374
+flip `name`iq`fullname!(`Dent`Beeblebrox`Prefect;98 42 126;("Arthur Dent"; " "; "Ford Prefect"))
+6200630B00030000006E616D650069710066756C6C6E616D65000000030000000B000300000044656E7400426565626C6562726F7800507265666563740007000300000062000000000000002A000000000000007E000000000000000000030000000A000B0000004172746875722044656E74F6200A000C000000466F72642050726566656374
 flip `name`iq`misc!(`Dent`Beeblebrox`Prefect;98 42 126;("The Hitch Hiker's Guide to the Galaxy"; 160; 1979.10.12))
 6200630B00030000006E616D65006971006D697363000000030000000B000300000044656E7400426565626C6562726F7800507265666563740007000300000062000000000000002A000000000000007E000000000000000000030000000A00250000005468652048697463682048696B6572277320477569646520746F207468652047616C617879F9A000000000000000F226E3FFFF
 ([] sc:1 2 3; nsc:(1 2; 3 4; 5 6 7))
