@@ -104,6 +104,8 @@ EXPRESSIONS = OrderedDict((
                     ('``',                                            qlist(numpy.array([qnull(QSYMBOL), qnull(QSYMBOL)], dtype=numpy.object), qtype=QSYMBOL_LIST)),
                     ('("quick"; "brown"; "fox"; "jumps"; "over"; "a lazy"; "dog")',
                                                                       ['quick', 'brown', 'fox', 'jumps', 'over', 'a lazy', 'dog']),
+                    ('("quick"; " "; "fox"; "jumps"; "over"; "a lazy"; "dog")',
+                                                                      ['quick', ' ', 'fox', 'jumps', 'over', 'a lazy', 'dog']),                           
                     ('{x+y}',                                         QLambda('{x+y}')),
                     ('{x+y}[3]',                                      QProjection([QLambda('{x+y}'), numpy.int64(3)])),
                     ('insert [1]',                                    QProjection([QFunction(0), numpy.int64(1)])),
@@ -149,6 +151,11 @@ EXPRESSIONS = OrderedDict((
                                                                              [qlist(numpy.array(['Dent', 'Beeblebrox', 'Prefect']), qtype = QSYMBOL_LIST), 
                                                                               qlist(numpy.array([98, 42, 126]), qtype = QLONG_LIST),
                                                                               ["Arthur Dent", "Zaphod Beeblebrox", "Ford Prefect"]])),
+                    ('flip `name`iq`fullname!(`Dent`Beeblebrox`Prefect;98 42 126;("Arthur Dent"; " "; "Ford Prefect"))',
+                                                                      qtable(qlist(numpy.array(['name', 'iq', 'fullname']), qtype = QSYMBOL_LIST),
+                                                                             [qlist(numpy.array(['Dent', 'Beeblebrox', 'Prefect']), qtype = QSYMBOL_LIST), 
+                                                                              qlist(numpy.array([98, 42, 126]), qtype = QLONG_LIST),
+                                                                              ["Arthur Dent", " ", "Ford Prefect"]])),
                     ('([] sc:1 2 3; nsc:(1 2; 3 4; 5 6 7))',          qtable(qlist(numpy.array(['sc', 'nsc']), qtype = QSYMBOL_LIST),
                                                                              [qlist(numpy.array([1, 2, 3]), qtype = QLONG_LIST),
                                                                               [qlist(numpy.array([1, 2]), qtype = QLONG_LIST),
