@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------------
+  qPython 1.0 RC2 [TBA]
+------------------------------------------------------------------------------
+
+  - Fix: handling of nested lists of homogeneous length
+  - Fix: pandas: null representation for strings
+
+------------------------------------------------------------------------------
   qPython 1.0 RC1 [2014.10.22]
 ------------------------------------------------------------------------------
 
